--- a/ASS/css/style.css
+++ b/ASS/css/style.css
@@ -1,6 +1,14 @@
 body, html {
    height: 100%;
 }
+@font-face {
+        font-family: "RussoOne-Regular"; 
+        src: url("../fonts/RussoOne-Regular.eot"); 
+       src:url("../fonts/RussoOne-Regular.woff") format("woff");
+      src:  url("../fonts/RussoOne-Regular.ttf") format("truetype"); 
+        font-style: normal; 
+        font-weight: normal; 
+}
 .frame1 {
 background-image: url(../img/fr1.png);
 position: relative;
@@ -9,8 +17,7 @@ background-size: cover;
 background-position: center;
 text-align: center;
 height: 100vh;
-font-family: 'Russo one';
-/*padding-right: 1600px;*/
+font-family: 'RussoOne-Regular';
 
 }
 
@@ -52,28 +59,74 @@ font-family: 'Russo one';
     height: 100vh;
 } 
 .text {
-
+    font-family: 'RussoOne-Regular';
 
 }
 .main-menu {
     font-size: 40px;
+    position: absolute;
+    font-family: 'RussoOne-Regular';
+    color: #F9E6E6;
+    -webkit-text-stroke-width:3px;
+-webkit-text-stroke-color: black;
+
+    
 }
 .menu {
-  font-size: 22px;
+  font-size: 32px;
   padding-right: 55px;
+  position: absolute;
+  font-family: "RussoOne-Regular";
+  color: #F9E6E6;   
+-webkit-text-stroke-width:3px;
+-webkit-text-stroke-color: black;
  
 }
 .girl1 {
     padding-bottom: 700px;
     position: absolute;
     height: 5;
+    padding-top: 200px;
 }
 .girl2 {
     position: absolute;
-    padding-left: 1500px;
-    /*padding-top: 100px ;*/
-    
+    padding-left: 2100px;
+    padding-top: 70px;
+}
+.text1 {
+font-size: 42px;
+position: absolute;
+padding-left: 1000px;
+padding-top: 200px;
+font-family: "RussoOne-Regular";
+color: #F9E6E6;
+
+}
+.tree1 {
+    position: absolute;
+    padding-left: 2010px;
+    padding-top: 250px;
+
+}
+ .tree2 {
+     position: absolute;
+     padding-top: 390px;
+
+ }  
+.container_slider_css{margin:50px auto;width:1000px;height:800px;position:absolute;padding-left:140px;}
+.photo_slider_css{position:absolute;animation:round 16s infinite;opacity:0;width:100%}
+@keyframes round {
+25%{opacity:1}
+40%{opacity:0}
+}
+img:nth-child(1){animation-delay:12s}
+img:nth-child(2){animation-delay:8s}
+img:nth-child(3){animation-delay:4s}
+img:nth-child(4){animation-delay:0}
+
+
+}
+      
     
    
-}
 
