--- a/ASS/css/style.css
+++ b/ASS/css/style.css
@@ -1,5 +1,6 @@
 body, html {
    height: 100%;
+    background: linear-gradient(0.25turn, #3f87a6, #ebf8e1, #f69d3c);
 }
 @font-face {
         font-family: "RussoOne-Regular"; 
@@ -10,19 +11,31 @@ body, html {
         font-weight: normal; 
 }
 .frame1 {
-background-image: url(../img/fr1.png);
+/*background-image: url(../img/fr1.png);*/
 position: relative;
 background-repeat: no-repeat;
 background-size: cover;
 background-position: center;
 text-align: center;
-height: 100vh;
+height: 80vh;
 font-family: 'RussoOne-Regular';
+    z-index: 1;
 
 }
 
 .frame2 {
-    background-image: url(../img/fr2.png);
+    /*background-image: url(../img/fr2.png);*/
+    position: relative;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    text-align: center;
+    height: 100vh;
+z-index: 1;
+    margin-top: 15px;
+}
+.frame3 {
+   /* background-image: url(../img/fr3.png);*/
     position: relative;
     background-repeat: no-repeat;
     background-size: cover;
@@ -30,40 +43,15 @@ font-family: 'RussoOne-Regular';
     text-align: center;
     height: 100vh;
     z-index: -1;
-}
-.frame3 {
-    background-image: url(../img/fr3.png);
-    position: relative;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    text-align: center;
-    height: 100vh;
-}
-.frame4 {
-    background-image: url(../img/fr4.png);
-    position: relative;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    text-align: center;
-    height: 100vh;
-}
-.frame5 {
-    background-image: url(../img/fr5.png);
-    position: relative;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    text-align: center;
-    height: 100vh;
+
 } 
 .text {
     font-family: 'RussoOne-Regular';
 
 }
 .main-menu {
-    font-size: 40px;
+    padding-left: 10px;
+    font-size: 38px;
     position: absolute;
     font-family: 'RussoOne-Regular';
     color: #F9E6E6;
@@ -80,52 +68,252 @@ font-family: 'RussoOne-Regular';
   color: #F9E6E6;   
 -webkit-text-stroke-width:3px;
 -webkit-text-stroke-color: black;
+    padding-bottom: 50px;
  
 }
 .girl1 {
-    padding-bottom: 700px;
+    /*padding-bottom: 700px;*/
     position: absolute;
-    height: 5;
-    padding-top: 200px;
+    margin-top: 220px;
 }
 .girl2 {
     position: absolute;
-    padding-left: 2100px;
-    padding-top: 70px;
+    margin-left: 1443px;
+    margin-top: 70px;
 }
 .text1 {
 font-size: 42px;
 position: absolute;
-padding-left: 1000px;
-padding-top: 200px;
+margin-left: 700px;
+margin-top: 200px;
 font-family: "RussoOne-Regular";
 color: #F9E6E6;
 
 }
 .tree1 {
     position: absolute;
-    padding-left: 2010px;
-    padding-top: 250px;
+    margin-left: 1376px;
+    margin-top: 250px;
 
 }
  .tree2 {
      position: absolute;
-     padding-top: 390px;
+     margin-top: 390px;
+     margin-right: 175px;
 
- }  
-.container_slider_css{margin:50px auto;width:1000px;height:800px;position:absolute;padding-left:140px;}
-.photo_slider_css{position:absolute;animation:round 16s infinite;opacity:0;width:100%}
-@keyframes round {
-25%{opacity:1}
-40%{opacity:0}
+ }
+.wrapper {
+    height: 800px;
+    margin: 0 auto 0;
+    position: relative;
+    width: 800px;
 }
-img:nth-child(1){animation-delay:12s}
-img:nth-child(2){animation-delay:8s}
-img:nth-child(3){animation-delay:4s}
-img:nth-child(4){animation-delay:0}
+
+.slider {
+    margin-top: 350px;
+    height: inherit;
+    overflow: hidden;
+    position: relative;
+    border-radius: 25px;
+    width: inherit;
+    -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, .5);
+    -moz-box-shadow: 0 0 20px rgba(0, 0, 0, .5);
+    -o-box-shadow: 0 0 20px rgba(0, 0, 0, .5);
+    box-shadow: 0 0 20px rgba(0, 0, 0, .5);
+}
+
+.slides {
+    height: inherit;
+    opacity: 0;
+    position: absolute;
+    width: inherit;
+    z-index: 0;
+    -webkit-transform: scale(1.5);
+    -moz-transform: scale(1.5);
+    -o-transform: scale(1.5);
+    transform: scale(1.5);
+    -webkit-transition: transform ease-in-out .5s, opacity ease-in-out .5s;
+    -moz-transition: transform ease-in-out .5s, opacity ease-in-out .5s;
+    -o-transition: transform ease-in-out .5s, opacity ease-in-out .5s;
+    transition: transform ease-in-out .5s, opacity ease-in-out .5s;
+}
+
+.slide1 { background-image: url(../img/image1.jpg.); }
+.slide2 { background-image: url(../img/image2.png); }
+.slide3 { background-image: url(../img/image3.png); }
+.slide4 { background-image: url(../img/image4.png); }
+.slide5 { background-image: url(../img/image5.jpg); }
+
+#slide1:checked ~ .slider > .slide1,
+#slide2:checked ~ .slider > .slide2,
+#slide3:checked ~ .slider > .slide3,
+#slide4:checked ~ .slider > .slide4,
+#slide5:checked ~ .slider > .slide5 {
+    opacity: 1;
+    z-index: 1;
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -o-transform: scale(1);
+    transform: scale(1);
+}
+
+.wrapper > input {
+    display: none;
+}
+
+.wrapper .controls {
+    left: 50%;
+    margin-left: -98px;
+    position: absolute;
+}
+
+.wrapper label {
+    cursor: pointer;
+    display: inline-block;
+    height: 8px;
+    margin: 25px 12px 0 16px;
+    position: relative;
+    width: 8px;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -o-border-radius: 50%;
+    border-radius: 50%;
+    -webkit-transition: background ease-in-out .5s;
+    -moz-transition: background ease-in-out .5s;
+    -o-transition: background ease-in-out .5s;
+    transition: background ease-in-out .5s;
+}
+
+.wrapper label:hover,
+#slide1:checked ~ .controls label:nth-of-type(1),
+#slide2:checked ~ .controls label:nth-of-type(2),
+#slide3:checked ~ .controls label:nth-of-type(3),
+#slide4:checked ~ .controls label:nth-of-type(4),
+#slide5:checked ~ .controls label:nth-of-type(5) {
+    background-color: #AB4C4B;
+}
+
+.wrapper label:after {
+    border: 2px solid #486192;
+    content: " ";
+    display: block;
+    height: 12px;
+    left: -4px;
+    position: absolute;
+    top: -4px;
+    width: 12px;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -o-border-radius: 50%;
+    border-radius: 50%;
+}
+.text2 {
+    font-size: 52px;
+    position: absolute;
+    padding-left: 150px;
+    padding-top: 200px;
+    font-family: "RussoOne-Regular";
+    color: #F9E6E6;
+    -webkit-text-stroke-width: 3px;
+    -webkit-text-stroke-color: black
+}
+.text3 {
+    font-size: 42px;
+    position: absolute;
+    padding-left: 50px;
+
+    font-family: "RussoOne-Regular";
+    color: #F9E6E6;
+    -webkit-text-stroke-width: 3px;
+    -webkit-text-stroke-color: black;
+}
+.wrap {
+    padding-top: 10px;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.button {
+    font-family: Montserrat;
+    min-width: 300px;
+    min-height: 60px;
+    font-size: 22px;
+    text-transform: uppercase;
+    letter-spacing: 1.3px;
+    font-weight: 700;
+    color: #313133;
+    background: #4FD1C5;
+    background: linear-gradient(90deg, rgba(255, 255, 0, 1); 0%, rgba(255, 255, 0, 1); 100%);
+    border: none;
+    border-radius: 1000px;
+    box-shadow: 12px 12px 24px rgba(79,209,197,.64);
+    transition: all 0.3s ease-in-out 0s;
+    cursor: pointer;
+    outline: none;
+    position: relative;
+    padding: 10px;
+}
+
+button::before {
+    font-family: Montserrat;
+    content: '';
+    border-radius: 1000px;
+    min-width: calc(300px + 12px);
+    min-height: calc(60px + 12px);
+    border: 6px solid #00FFCB;
+    box-shadow: 0 0 60px rgba(100,155,103,.64);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    transition: all .3s ease-in-out 0s;
+}
+
+.button:hover, .button:focus {
+    color: White;
+    transform: translateY(-6px);
+}
+
+button:hover::before, button:focus::before {
+    opacity: 1;
+}
+
+button:hover::after, button:focus::after {
+    animation: none;
+    display: none;
+}
+
+@keyframes ring {
+    0% {
+        width: 30px;
+        height: 30px;
+        opacity: 1;
+    }
+    100% {
+        width: 300px;
+        height: 300px;
+        opacity: 0;
+    }
+}
+.logo1{
+position: relative;
+
+}
+.logo2{
+    position: relative;
 
 
 }
+.logo3{
+    position: relative;
+
+
+}
+
+
       
     
    
