--- a/ASS/css/style.css
+++ b/ASS/css/style.css
@@ -299,16 +299,19 @@ button:hover::after, button:focus::after {
     }
 }
 .logo1{
-position: relative;
+position: absolute;
+margin-left: 1600px;
 
 }
 .logo2{
-    position: relative;
+    position: absolute;
+    margin-left: 1650px;
 
 
 }
 .logo3{
-    position: relative;
+    position: absolute;
+    margin-left: 1700px;
 
 
 }
